load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "lpm_routing_pb",
    src = "lpm_routing.p4",
    out = "lpm_routing.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)

kt_jvm_test(
    name = "lpm_routing_test",
    srcs = ["LpmRoutingTest.kt"],
    data = [
        "lpm_routing.stf",
        ":lpm_routing_pb",
    ],
    test_class = "fourward.e2e.lpmrouting.LpmRoutingTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
