load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//e2e_tests:p4c.bzl", "p4c_compile")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

p4c_compile(
    name = "multi_table",
    src_p4 = "multi_table.p4",
)

kt_jvm_test(
    name = "multi_table_test",
    srcs = ["MultiTableTest.kt"],
    data = [
        "multi_table.stf",
        ":multi_table_pb",
    ],
    test_class = "fourward.e2e.multitable.MultiTableTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
