load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "multi_table",
    src = "multi_table.p4",
    out = "multi_table.txtpb",
)

kt_jvm_test(
    name = "multi_table_test",
    srcs = ["MultiTableTest.kt"],
    data = [
        "multi_table.stf",
        ":multi_table",
    ],
    test_class = "fourward.e2e.multitable.MultiTableTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
