load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

exports_files(
    [
        "s1.stf",
        "s2.stf",
        "two_switch.nstf",
        "two_switch_fail.nstf",
        "two_switch_inline.nstf",
        "mixed_entries.nstf",
        "inline_multicast.nstf",
    ],
    visibility = ["//cli:__pkg__"],
)

kt_jvm_test(
    name = "NetworkSimulatorTest",
    srcs = ["NetworkSimulatorTest.kt"],
    data = [
        "multicast.stf",
        "s1.stf",
        "s2.stf",
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/trace_tree:multicast_pb",
    ],
    test_class = "fourward.e2e.network.NetworkSimulatorTest",
    deps = [
        "//e2e_tests:golden_file",
        "//simulator:simulator_lib",
        "//stf",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)
